* Changed quick forms to skip polymorphic associations (they didn't work)
* Changed short hand forms to raise an error when trying to render an input for a polymorphic association (it didn't work, need a collection)
* Changed input() to raise an error when a :collection is not provided for a polymorphic association (we can't guess which class to use)

1.2.4.beta (unreleased)

* Changed :boolean inputs to use Rails' check_box_checked? instead of our own logic
* Changed developer instructions in README
* Fixed :boolean inputs to disable the included hidden input when disabling the actual checkbox
* Fixed that Formtastic was making changes to the options hash directly instead of on a duplicate, causing problems for those trying to reuse options on multiple inputs in the view
* Fixed that tiny scroll bars were appearing on legends in date/time/radio/cbheckboxes fielsets (GH-477)
* Fixed an issue when formtastic fails to determine if a checkbox is checked with custom checked and unchecked values (thanks to Eugene Bolshakov)
* Fixed that the hidden input rendered with a boolean checkbox did nt use the custom :name from :input_html options hash

1.2.3

* Removed deprecated methods input_field_set, button_field_set, boolean_select_input, boolean_radio_input and boolean_radio_input
* Removed deprecated :class option on commit_button (use :input_html instead)
* Fixed that stylesheets and initializers directories would be removed on uninstalling
* Fixed some documentation and formatting
* Fixed test coverage issues under Ruby 192 and Rails 2
* Fixed that input_html options were not being passed down to checkbox tags
* Changed internal duplication of the options hash so that the same options hash can be re-used over multiple inputs without being altered
* Changed internal configuration to use class_attribute when available (Rails 3) to avoid deprecation warnings
* Added Rails 3 compatible form generator templates in addition to existing Rails 2 support